@@ -11,11 +11,15 @@ set global innodb_commit_concurrency=42;
 select @@innodb_commit_concurrency;
 @@innodb_commit_concurrency
 42
+set global innodb_commit_concurrency=DEFAULT;
+select @@innodb_commit_concurrency;
+@@innodb_commit_concurrency
+1
 set global innodb_commit_concurrency=0;
 ERROR HY000: Incorrect arguments to SET
 select @@innodb_commit_concurrency;
 @@innodb_commit_concurrency
-42
+1
 set global innodb_commit_concurrency=1;
 select @@innodb_commit_concurrency;
 @@innodb_commit_concurrency
