@@ -16,3 +16,7 @@ set global innodb_commit_concurrency=0;
 select @@innodb_commit_concurrency;
 @@innodb_commit_concurrency
 0
+set global innodb_commit_concurrency=DEFAULT;
+select @@innodb_commit_concurrency;
+@@innodb_commit_concurrency
+0
