@@ -15,3 +15,5 @@ set global innodb_commit_concurrency=42;
 select @@innodb_commit_concurrency;
 set global innodb_commit_concurrency=0;
 select @@innodb_commit_concurrency;
+set global innodb_commit_concurrency=DEFAULT;
+select @@innodb_commit_concurrency;
